--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,7 +11,7 @@
   <meta property="fb:admins" content="568390229" />
 
   <!-- loading javascripts -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/1.6.0/annyang.min.js"></script>
+  <script src="js/annyang.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   
   <script>
